# falcon-core-libs

./: .dev_commands.sh  .gitignore  CYTHON_PORT_NOTES.md  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  falcon_core_c_api.pc.in  install_dependencies.sh  setup.py
python/: .coverage  Makefile  generate_all.py  generate_tests.py  generate_wrappers.py  generation_test_output.txt  pyproject.toml  run_coverage.py  setup.py
python/src/falcon_core/: __init__.py
python/src/falcon_core.egg-info/: PKG-INFO  SOURCES.txt
python/tests/: test_connection.py  test_connections.py  test_impedance.py  test_list.py  test_map.py  test_pair.py
python/tests/auto_generated/: test_acquisition_context.py  test_adjacency.py  test_analytic_function.py  test_axes_control_array.py  test_axes_control_array1_d.py  test_axes_coupled_labelled_domain.py  test_axes_discretizer.py  test_axes_double.py  test_axes_instrument_port.py  test_axes_int.py  test_axes_labelled_control_array.py  test_axes_labelled_control_array1_d.py  test_axes_labelled_measured_array.py  test_axes_labelled_measured_array1_d.py  test_axes_map_string_bool.py  test_axes_measurement_context.py  test_channel.py  test_channels.py  test_config.py  test_connection.py  test_connections.py  test_control_array.py  test_control_array1_d.py  test_coupled_labelled_domain.py  test_device_voltage_state.py  test_device_voltage_states.py  test_discrete_space.py  test_discretizer.py  test_domain.py  test_dot_gate_with_neighbors.py  test_dot_gates_with_neighbors.py  test_f_array_double.py  test_f_array_int.py  test_gname.py  (+131 more)
(+7245 files in other folders)
