[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.29"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Tell pytest to only look for tests in the 'tests' directory
testpaths = ["tests"]

[tool.coverage.report]
# Explicitly exclude setup.py from coverage reports
omit = ["setup.py"]
